--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jarvis</title>
+
+    <link rel="shortcut icon" href="assets/vendore/texllate/img/logo.ico" type="image/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -72,6 +74,7 @@
     <script src="http://jschr.github.io/textillate/jquery.textillate.js"></script>
 
     <script src="main.js"></script>
+    <script src="/eel.js"></script>
 
 
 
