--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
                 <div class="col-md-12">
                     <div class="d-flex justify-content-center  align-items-center" style="height: 100vh;">
                         <div class="d">
-                            <p class="text-start text-light mb-4 siri-message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, sit ullam perferendis.</p>
+                            <p class="text-start text-light mb-4 siri-message">Hello I am Jarvis</p>
                             <div id="siri-container"></div> 
 
                         </div>
